# django-python-webapp

./: README.md  pyproject.toml
.github/prompts/: prompts.prompt.md
schedule/: settings.py
